# art-from--auto-revision-epistemic-engine

./: README.md  pyproject.toml  seed.yaml
src/art_from_auto_revision/: __init__.py  server.py  visualizer.py
tests/: test_visualizer.py
