[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "art-from-auto-revision"
version = "0.1.0"
description = "Interactive visualization of self-governing orchestration — governance as performance art"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "organvm-ii-poiesis"},
]
keywords = ["generative-art", "governance", "visualization", "orchestration", "svg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "flask>=3.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/organvm-ii-poiesis/art-from--auto-revision-epistemic-engine"
Repository = "https://github.com/organvm-ii-poiesis/art-from--auto-revision-epistemic-engine"
"Source Engine" = "https://github.com/organvm-i-theoria/auto-revision-epistemic-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
